Deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:

  annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
  name: nginx-ingress
spec:
  tls:
    - hosts: python-app.devops.com
      secretName: tls-secret
  rules:
    - host: python-app.devops.com
      http:
        paths:
        - path: /
          backend:
            serviceName: app-svc
            servicePort: 8000
